--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"twitter",
 		"bootstrap",
 		"website",
-		"docpad",
+		"wintersmith",
 		"theme"
 	],
 	"author": {
@@ -28,15 +28,14 @@
 		"url" : "https://github.com/obazoud/blog.bazoud.com"
 	},
 	"dependencies": {
-		"coffee-script": "1.1.2",
-		"express": "2.4.7",
-		"docpad": "1.4.1",
-		"datejs": "0.0.2",
-		"bal-util": "0.7.0",
-		"compress": "0.1.9",
-		"mime" : "1.2.2",
-		"rss": "0.0.2",
-		"cson": "0.2.0"
+		"coffee-script": "1.3.3",
+		"wintersmith": "1.1.1",
+		"express": "3.0",
+		"gzippo": "0.1.7",
+		"connect": "2.3.4"
+	},
+	"_notes_": {
+		"gzippo/connect bugs": "see https://github.com/tomgco/gzippo/issues/43"
 	},
 	"engines" : {
 		"node": "0.4.x"
