--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
 		"wintersmith": "1.1.1",
 		"express": "3.0",
 		"gzippo": "0.1.7",
-		"connect": "2.3.4"
+		"connect": "2.3.4",
+		"rss": "0.0.2"
 	},
 	"_notes_": {
 		"gzippo/connect bugs": "see https://github.com/tomgco/gzippo/issues/43"
