--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
 		"express": "3.0",
 		"gzippo": "0.1.7",
 		"connect": "2.3.4",
-		"rss": "0.0.2"
+		"rss": "0.0.2",
+		"async" : "0.1.22"
 	},
 	"_notes_": {
 		"gzippo/connect bugs": "see https://github.com/tomgco/gzippo/issues/43"
