--- a/package.json
+++ b/package.json
@@ -40,6 +40,14 @@
 	"_notes_": {
 		"gzippo/connect bugs": "see https://github.com/tomgco/gzippo/issues/43"
 	},
+	"devDependencies": {
+		"vows": "0.6.4",
+		"phantom": "0.3.5",
+		"request": "*"
+	},
+	"scripts": {
+		"test": "vows --spec"
+	},
 	"engines" : {
 		"node": "0.8.x",
 		"npm": "1.1.x"
